tolk-tester/tests/invalid-declaration/err-1617.tolk
fun main() {
    val (s, i);
}

/**
@compilation_should_fail
@stderr variables declaration must be followed by assignment
 */
